pkl-core/src/test/files/LanguageSnippetTests/input/errors/analyzeInvalidModuleUri.pkl
import "pkl:analyze"

result = analyze.importGraph(Set("foo <>"))
